fix de icono overlap

--- a/Fase 2/Evidencias Proyecto/Evidencias de sistema/college_choice_helper/core/static/core/css/estilo.css
+++ b/Fase 2/Evidencias Proyecto/Evidencias de sistema/college_choice_helper/core/static/core/css/estilo.css
@@ -769,3 +769,13 @@ body, ul, li {
     margin-bottom: 5px;
 }
 
+
+input[type="password"]::-ms-reveal,
+input[type="password"]::-ms-clear,
+input[type="password"]::-webkit-credentials-auto-fill-button {
+    display: none !important;
+}
+
+input[type="password"]::-webkit-textfield-decoration-container {
+    display: none !important;
+}
